--- a/src/MachineMonitor/MainWindow.xaml
+++ b/src/MachineMonitor/MainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="MachineMonitor.MainWindow"
+﻿<Window x:Class="Monbsoft.MachineMonitor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MachineMonitor"
-        xmlns:controls="clr-namespace:MachineMonitor.Controls"
+        xmlns:controls="clr-namespace:Monbsoft.MachineMonitor.Controls"
         mc:Ignorable="d"
         Title="Machine Monitor"
         Background="{StaticResource SystemControlBackgroundBrush}"
-        Height="450" Width="800">
+        Height="450" 
+        Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -20,7 +20,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Processeur"/>
+        <TextBlock Style="{StaticResource TitleStyle}" Text="Processeur" />
         <controls:RadialProgressBar x:Name="cpuProgressBar"
                                     Outline="Gray"
                                     Foreground="Green"
