--- a/src/MachineMonitor/Views/MainWindow.xaml
+++ b/src/MachineMonitor/Views/MainWindow.xaml
@@ -7,8 +7,11 @@
         mc:Ignorable="d"
         Title="Machine Monitor"
         Background="{StaticResource SystemControlBackgroundBrush}"
-        Height="450" 
-        Width="800" Loaded="Window_Loaded">
+        Height="100" 
+        Loaded="Window_Loaded" 
+        ResizeMode="NoResize"
+        Width="400" 
+        WindowStyle="None">
     <Window.ContextMenu>
         <ContextMenu>
             <MenuItem x:Name="conflgurationMenuItem"
@@ -32,58 +35,59 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <!-- cpu -->
         <TextBlock Style="{StaticResource TitleStyle}" 
                    Text="Processeur" />
-            <controls:RadialProgressBar x:Name="cpuProgressBar"
-                                        Outline="Gray"
-                                        Foreground="Green"
-                                        Grid.Row="1"
-                                        Height="50"
-                                        Thickness="6"
-                                        Value="{Binding Cpu, Mode=OneWay}"                                    
-                                        Width="50">
+        <controls:RadialProgressBar x:Name="cpuProgressBar"
+                                    Foreground="Green"
+                                    Grid.Row="1"
+                                    Height="50"
+                                    Outline="Gray"
+                                    Thickness="6"
+                                    Value="{Binding Cpu, Mode=OneWay}"                                    
+                                    Width="50">
         </controls:RadialProgressBar>
         <!-- Memory-->
         <TextBlock Grid.Column="1"
                    Style="{StaticResource TitleStyle}" 
                    Text="Mémoire" />
-            <controls:RadialProgressBar x:Name="memoryProgressBar"
-                                        Outline="Gray"
-                                        Foreground="Green"
-                                        Grid.Column="1"
-                                        Grid.Row="1"
-                                        Height="50"
-                                        Thickness="6"
-                                        Value="{Binding Ram, Mode=OneWay}"                                    
-                                        Width="50">
+        <controls:RadialProgressBar x:Name="memoryProgressBar"
+                                    Foreground="Green"
+                                    Grid.Column="1"
+                                    Grid.Row="1"
+                                    Height="50"
+                                    Outline="Gray"
+                                    Thickness="6"
+                                    Value="{Binding Ram, Mode=OneWay}"                                    
+                                    Width="50">
         </controls:RadialProgressBar>
         <!-- Disk -->
         <TextBlock Grid.Column="2"
                    Style="{StaticResource TitleStyle}" 
                    Text="Disque" />
-            <controls:RadialProgressBar x:Name="diskProgressBar"
-                                            Outline="Gray"
-                                            Foreground="Green"
-                                            Grid.Column="2"
-                                            Grid.Row="1"
-                                            Height="50"
-                                            Thickness="6"
-                                            Value="{Binding Disk, Mode=OneWay}"                                    
-                                            Width="50">
+        <controls:RadialProgressBar x:Name="diskProgressBar"
+                                    Outline="Gray"
+                                    Foreground="Green"
+                                    Grid.Column="2"
+                                    Grid.Row="1"
+                                    Height="50"
+                                    Thickness="6"
+                                    Value="{Binding Disk, Mode=OneWay}"                                    
+                                    Width="50">
             </controls:RadialProgressBar>
         <!-- Network -->
         <TextBlock Grid.Column="3"
                    Style="{StaticResource TitleStyle}" 
                    Text="Réseau" />
         <controls:RadialProgressBar x:Name="networkProgressBar"
-                                        Outline="Gray"
-                                        Foreground="Green"
-                                        Grid.Column="3"
-                                        Grid.Row="1"
-                                        Height="50"
-                                        Thickness="6"
-                                        Value="{Binding Disk, Mode=OneWay}"                                    
-                                        Width="50">
+                                    Outline="Gray"
+                                    Foreground="Green"
+                                    Grid.Column="3"
+                                    Grid.Row="1"
+                                    Height="50"
+                                    Thickness="6"
+                                    Value="{Binding Disk, Mode=OneWay}"                                    
+                                    Width="50">
         </controls:RadialProgressBar>        
     </Grid>
 </Window>
