--- a/src/MachineMonitor/Styles/TextBlock.xaml
+++ b/src/MachineMonitor/Styles/TextBlock.xaml
@@ -9,5 +9,8 @@
         <Setter Property="Margin" Value="0, 5"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    <Style x:Key="TextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
     
 </ResourceDictionary>
