--- a/src/MachineMonitor/Views/ConfigurationWindow.xaml
+++ b/src/MachineMonitor/Views/ConfigurationWindow.xaml
@@ -26,13 +26,9 @@
         <ComboBox Grid.Column="1"
                   Grid.Row="1"
                   HorizontalAlignment="Left"
-                  ItemsSource="{Binding Networks}"                  
+                  ItemsSource="{Binding Networks}"
+                  SelectedItem="{Binding SelectedNetwork}"
                   Width="150">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
         </ComboBox>
     </Grid>
 </Window>
