--- a/src/MachineMonitor/Views/ConfigurationWindow.xaml
+++ b/src/MachineMonitor/Views/ConfigurationWindow.xaml
@@ -7,8 +7,6 @@
         mc:Ignorable="d"
         Title="Configuration"
         Background="{StaticResource SystemControlBackgroundBrush}"
-        Height="450" 
-        Width="800" 
         WindowStartupLocation="CenterScreen">
     <Grid Margin="5,0">
         <Grid.ColumnDefinitions>
@@ -16,6 +14,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
@@ -30,5 +30,12 @@
                   SelectedItem="{Binding SelectedNetwork}"
                   Width="150">
         </ComboBox>
+        <TextBlock Grid.Row="2"
+                   Style="{StaticResource TextBlockStyle}"
+                   Text="Transparence:"/>
+        <CheckBox Grid.Column="1"
+                  Grid.Row="3"
+                  IsChecked="{Binding Transparent}"/>
+
     </Grid>
 </Window>
