--- a/src/MachineMonitor/Views/ConfigurationWindow.xaml
+++ b/src/MachineMonitor/Views/ConfigurationWindow.xaml
@@ -3,11 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Monbsoft.MachineMonitor.Views"
         mc:Ignorable="d"
         Title="Configuration"
         Background="{StaticResource SystemControlBackgroundBrush}"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" Width="400" Height="200">
     <Grid Margin="5,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120"/>
@@ -19,7 +18,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <TextBlock Style="{StaticResource TextBlockStyle}"
                    Text="Réseau:"/>
@@ -36,6 +35,13 @@
         <CheckBox Grid.Column="1"
                   Grid.Row="3"
                   IsChecked="{Binding Transparent}"/>
-
+        <Button x:Name="closeButton" 
+                Click="CloseButton_Click"
+                Content="Fermer"
+                HorizontalAlignment="Center"
+                Grid.ColumnSpan="2"
+                Grid.Row="5"
+                Margin="5"
+                Padding="5" />
     </Grid>
 </Window>
