--- a/src/MachineMonitor/Views/MainWindow.xaml
+++ b/src/MachineMonitor/Views/MainWindow.xaml
@@ -8,6 +8,7 @@
         AllowsTransparency="True"
         Background="{StaticResource SystemControlBackgroundBrush}"
         Height="100" 
+        Icon="/MachineMonitor;component/Assets/machineicon.ico"
         Loaded="Window_Loaded" 
         ResizeMode="NoResize"
         Title="Machine Monitor"
