--- a/src/MachineMonitor/Views/ConfigurationWindow.xaml
+++ b/src/MachineMonitor/Views/ConfigurationWindow.xaml
@@ -6,7 +6,8 @@
         mc:Ignorable="d"
         Title="Configuration"
         Background="{StaticResource SystemControlBackgroundBrush}"
-        Height="200" 
+        Height="210" 
+        ResizeMode="NoResize"
         ShowInTaskbar="False"
         Width="400" 
         WindowStartupLocation="CenterScreen">
@@ -21,7 +22,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>            
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -49,12 +52,19 @@
         <CheckBox Grid.Column="1"
                   Grid.Row="5"
                   IsChecked="{Binding Transparent}"/>
+        <TextBlock Grid.Row="6"
+                   Style="{StaticResource TextBlockStyle}"
+                   Text="Premier plan"/>
+        <CheckBox Grid.Column="1"
+                  Grid.Row="7"
+                  IsChecked="{Binding Topmost}"/>
+        <!-- close button -->
         <Button x:Name="closeButton" 
                 Click="CloseButton_Click"
                 Content="Fermer"
                 HorizontalAlignment="Center"
                 Grid.ColumnSpan="2"
-                Grid.Row="7"
+                Grid.Row="9"
                 Margin="5"
                 Padding="5" />
     </Grid>
